--- a/docs/en/changelogs/3.0.0.md
+++ b/docs/en/changelogs/3.0.0.md
@@ -84,6 +84,34 @@ included through `translatable/_config.php`:
 	Object::add_extension('SiteTree', 'Translatable');
 	Object::add_extension('SiteConfig', 'Translatable');
 	
+### Default translation source in YML instead of PHP $lang array, using Zend_Translate ###
+
+This allows for a more flexible handling of translation sources in various formats.
+Your own translations can be converted automatically via the ["i18n_yml_converter" module](https://github.com/chillu/i18n_yml_converter). Any modifications
+to the `$lang` global variable need to be re-applied via YML, or directly to the new translation adapters.
+
+	:::php
+	i18n::get_translator('core')->getAdapater()->addTranslation(array(
+		'content' => array('My.Entity' => 'My Translation'),
+		'locale' => 'en_US',
+		'usetranslateadapter' => true
+	));
+
+In order to keep backwards compatibility for PHP-based translations
+(from modules or your own code) without conversion, please add the following to your `_config.php`.
+Note that its just necessary if SilverStripe is used in a language other than the default (`en_US`).
+
+	:::php
+	i18n::register_translator(
+		new Zend_Translate(array(
+			'adapter' => 'i18nSSLegacyAdapter',
+			'locale' => i18n::default_locale(),
+			'disableNotices' => true,
+		)),
+		'legacy',
+		9 // priority lower than standard translator
+	);
+	
 ### Removed "auto-merging" of member records from `Member->onBeforeWrite()`
 
 Due to security reasons. Please use `DataObject->merge()` explicitly if this is desired behaviour.
